package group1.unisim;
public abstract class Event {
    public int duration;


    public void Start(){

    }

    public void Update(){

    }

    public void End(){
        
    }

}
