package group1.unisim;
public enum Service {
    Accomodation,
    TeachingSpace,
    SelfStudy,
    FoodDrink
}
