package group1.unisim;

public class Thought {
    public String title;
    public String description;
    public int modification;
}
