@startuml
class GameManager {
    time : float
    isPaused : bool
    isTermTime : bool
    currentEvent : Event
    Pause(bool) : void
    Update() : void
}

class SatisfactionBar {
    value : float
    target : float
    base : float
    changeRate : float
    GetThought(int) : Thought
    AddThought(Thought) : int
    RemoveThought(int) : void
}

class Thought {
    title : string
    description : string
    modification : float
}

class BuildingSlot {
    timeConstructing : int
    isConstructionActive : bool
    position : Vector2
    maxSize : int
    Update() : void
    Build(Building) : void
    Upgrade() : void
    Demolish() : void
}

enum Service {
    Accomodation
    TeachingSpace
    SelfStudy
    FoodDrink
}

class Building {
    name : string
    servicesProvided: Array<Service>
    constructionTime : int
    size : int
    sprite : Texture
}

abstract Event {
    duration : int
    Start() : void
    Update() : void
    End() : void
}

class ContentLoader {
    Load() : void
}

GameManager -- "Contains" ContentLoader
GameManager -- "Contains" SatisfactionBar
SatisfactionBar -- "Contains" Thought
GameManager -- "Creates" Event
GameManager -- "Contains multiple" BuildingSlot
ContentLoader -- "Creates and contains multiple\n" Building
ContentLoader -- "Creates and contains multiple" Thought
BuildingSlot -- "     References" Building
Event -- "Creates\n\n" Thought
GameManager -- "Creates\n" Thought
@enduml